--- a/analysis/apply_citrus_singlecell.Rmd
+++ b/analysis/apply_citrus_singlecell.Rmd
@@ -25,6 +25,7 @@ library(ggplot2)
 #devtools::install_github("kassambara/easyGgplot2")
 library(easyGgplot2)
 library(stringr)
+library("cowplot")
 ```
 
 
@@ -91,6 +92,9 @@ ff <- ggplot2.barplot(data = df, xName = "Quantile", yName = "Proportion", group
 
 ff
 ```
+
+
+
 ```{r}
 celltypes <- str_split_fixed(row.names(molecules_cpm_19101t), pattern= ".[A-H]", n=3)[,2]
 
@@ -101,7 +105,7 @@ df <- data.frame(PC1, PC2, "raw", celltypes)
 colnames(df) <- c("PC1", "PC2", "Method", "Type")
 
 
-ff1 <- ggplot2.scatterplot(data = df, xName = "PC1", yName = "PC2", groupName = "Type", size = 5, backgroundColor = "white", groupColors = c("#66B2FF", "#FFB266", "#FFAAD4"), xtitle = "PC1", ytitle = "PC2", mainTitle = "Raw", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = FALSE, mainTitleFont = c(25, "bold", "black"), xtitleFont = c(10,"bold", "black"), ytitleFont = c(10, "bold", "black"), xTickLabelFont = c(10, "bold", "black"), yTickLabelFont = c(10, "bold", "black"))
+ff1 <- ggplot2.scatterplot(data = df, xName = "PC1", yName = "PC2", groupName = "Type", size = 5, backgroundColor = "white", groupColors = c("#66B2FF", "#FFB266", "#FFAAD4"), xtitle = "PC1", ytitle = "PC2", mainTitle = "Raw", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = FALSE, mainTitleFont = c(15, "bold", "black"), xtitleFont = c(10,"bold", "black"), ytitleFont = c(10, "bold", "black"), xTickLabelFont = c(10, "bold", "black"), yTickLabelFont = c(10, "bold", "black"))
 
 pcs <- prcomp(scPLS_tech$Adjusted, center = TRUE)
 PC1 <- pcs$x[, 1]
@@ -111,7 +115,7 @@ colnames(df) <- c("PC1", "PC2", "Method", "Type")
 
 ff2 <- ggplot2.scatterplot(data = df, xName = "PC1", yName = "PC2",
 groupName = "Type", size = 5, backgroundColor = "white", groupColors = c("#66B2FF", "#FFB266", "#FFAAD4"), xtitle = "PC1",
-ytitle = "PC2", mainTitle = "ERCC technical effect removed", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = TRUE, mainTitleFont = c(25, "bold", "black"), xtitleFont = c(10,
+ytitle = "PC2", mainTitle = "ERCC technical effect removed", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = TRUE, mainTitleFont = c(10, "bold", "black"), xtitleFont = c(10,
 "bold", "black"), ytitleFont = c(10, "bold", "black"), xTickLabelFont=c(10, "bold", "black"), yTickLabelFont= c(10, "bold", "black"), legendTitle= "Cell type", legendTitleFont= c(10, "bold", "black"), legendTextFont = c(10, "bold", "black") )
 
 ```
@@ -121,13 +125,9 @@ ytitle = "PC2", mainTitle = "ERCC technical effect removed", removePanelGrid = T
 
 
 ```{r}
-ff1
+plot_grid(ff1,ff2)
 ```
 
-
-```{r}
-ff2
-```
 
 ###Try more k values  
 I changed the chunk size to 500 to try to run the algorithm faster.  
