--- a/analysis/apply_citrus_singlecell.Rmd
+++ b/analysis/apply_citrus_singlecell.Rmd
@@ -189,7 +189,7 @@ run: (1,3), (1,4), (1,5)
 
 
 ```{r}
-pcs <- prcomp(scPLS_tech.2.2$Adjusted, center = TRUE)
+pcs <- prcomp(scPLS_tech.1.2$Adjusted, center = TRUE)
 PC1 <- pcs$x[, 1]
 PC2 <- pcs$x[, 2]
 df <- data.frame(PC1, PC2, "rm_ERCC", celltypes) 
@@ -197,7 +197,7 @@ colnames(df) <- c("PC1", "PC2", "Method", "Type")
 
 ff3 <- ggplot2.scatterplot(data = df, xName = "PC1", yName = "PC2",
 groupName = "Type", size = 5, backgroundColor = "white", groupColors = c("#66B2FF", "#FFB266", "#FFAAD4"), xtitle = "PC1",
-ytitle = "PC2", mainTitle = "ERCC technical effect removed", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = TRUE, mainTitleFont = c(10, "bold", "black"), xtitleFont = c(10,
+ytitle = "PC2", mainTitle = "ERCC technical effect removed, k2=2", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = TRUE, mainTitleFont = c(10, "bold", "black"), xtitleFont = c(10,
 "bold", "black"), ytitleFont = c(10, "bold", "black"), xTickLabelFont=c(10, "bold", "black"), yTickLabelFont= c(10, "bold", "black"), legendTitle= "Cell type", legendTitleFont= c(10, "bold", "black"), legendTextFont = c(10, "bold", "black") )
 
 ff3
@@ -246,3 +246,113 @@ plot(L_change, ylab="Absolute value change in Likelihood", main="Compare k2 valu
 ```
 
 Biggest improvement in likelihood is between k2=1 and k2=2. 
+
+**DON'T USE THIS ANALYSIS FOR MODEL SELECTION, USE THE MIN BIC**
+
+
+###Compare likelihoods with BIC  
+BIC= ln(n)k-2ln(L)  
+```{r}
+#BIC = ln(number of cells) * (k1 + k2) - 2 *(scPLS output of likelihood)
+ncells=201
+
+Bic1= log(ncells) * (2) - (2 * (mean(summary(scPLS_tech$Likelihood))))
+Bic2= log(ncells) * (3) - (2 * (mean(summary(scPLS_tech.1.2$Likelihood))))
+Bic3= log(ncells) * (4) - (2 * (mean(summary(scPLS_tech.1.3$Likelihood))))
+Bic4= log(ncells) * (5) - (2 * (mean(summary(scPLS_tech.1.4$Likelihood))))
+Bic5= log(ncells) * (6) - (2 * (mean(summary(scPLS_tech.1.5$Likelihood))))
+
+Bic_likelihood= c(Bic1,Bic2, Bic3, Bic4, Bic5)
+
+plot(Bic_likelihood, ylab="Bayesian information criterion", xlab="k2 value", main="With a constant k1 value, BIC decreases with k2 increase")
+
+which.min(Bic_likelihood)
+```
+
+The smallest BIC is achieved when k2=5. 
+
+
+###Plot models with varying K values  
+
+```{r ff4}
+#ff1 is raw
+#k2=1 : ff2
+#k2=2: ff3
+
+
+
+pcs <- prcomp(scPLS_tech.1.3$Adjusted, center = TRUE)
+PC1 <- pcs$x[, 1]
+PC2 <- pcs$x[, 2]
+df <- data.frame(PC1, PC2, "rm_ERCC", celltypes) 
+colnames(df) <- c("PC1", "PC2", "Method", "Type")
+
+ff4 <- ggplot2.scatterplot(data = df, xName = "PC1", yName = "PC2",
+groupName = "Type", size = 5, backgroundColor = "white", groupColors = c("#66B2FF", "#FFB266", "#FFAAD4"), xtitle = "PC1",
+ytitle = "PC2", mainTitle = "k2=3", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = TRUE, mainTitleFont = c(10, "bold", "black"), xtitleFont = c(10,
+"bold", "black"), ytitleFont = c(10, "bold", "black"), xTickLabelFont=c(10, "bold", "black"), yTickLabelFont= c(10, "bold", "black"), legendTitle= "Cell type", legendTitleFont= c(10, "bold", "black"), legendTextFont = c(10, "bold", "black") )
+
+
+```
+
+```{r ff5}
+pcs <- prcomp(scPLS_tech.1.4$Adjusted, center = TRUE)
+PC1 <- pcs$x[, 1]
+PC2 <- pcs$x[, 2]
+df <- data.frame(PC1, PC2, "rm_ERCC", celltypes) 
+colnames(df) <- c("PC1", "PC2", "Method", "Type")
+
+ff5 <- ggplot2.scatterplot(data = df, xName = "PC1", yName = "PC2",
+groupName = "Type", size = 5, backgroundColor = "white", groupColors = c("#66B2FF", "#FFB266", "#FFAAD4"), xtitle = "PC1",
+ytitle = "PC2", mainTitle = "k2=4", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = TRUE, mainTitleFont = c(10, "bold", "black"), xtitleFont = c(10,
+"bold", "black"), ytitleFont = c(10, "bold", "black"), xTickLabelFont=c(10, "bold", "black"), yTickLabelFont= c(10, "bold", "black"), legendTitle= "Cell type", legendTitleFont= c(10, "bold", "black"), legendTextFont = c(10, "bold", "black") )
+```
+
+```{r ff6}
+pcs <- prcomp(scPLS_tech.1.5$Adjusted, center = TRUE)
+PC1 <- pcs$x[, 1]
+PC2 <- pcs$x[, 2]
+df <- data.frame(PC1, PC2, "rm_ERCC", celltypes) 
+colnames(df) <- c("PC1", "PC2", "Method", "Type")
+
+ff6 <- ggplot2.scatterplot(data = df, xName = "PC1", yName = "PC2",
+groupName = "Type", size = 5, backgroundColor = "white", groupColors = c("#66B2FF", "#FFB266", "#FFAAD4"), xtitle = "PC1",
+ytitle = "PC2", mainTitle = "k2=5", removePanelGrid = TRUE, removePanelBorder = TRUE, setShapeByGroupName = TRUE, showLegend = TRUE, mainTitleFont = c(10, "bold", "black"), xtitleFont = c(10,
+"bold", "black"), ytitleFont = c(10, "bold", "black"), xTickLabelFont=c(10, "bold", "black"), yTickLabelFont= c(10, "bold", "black"), legendTitle= "Cell type", legendTitleFont= c(10, "bold", "black"), legendTextFont = c(10, "bold", "black") )
+```
+
+
+
+
+
+
+```{r}
+plot_grid(ff1, ff2, ff3, ff4, ff5, ff6, nrow = 3 )
+```
+
+
+
+```{r}
+
+
+x1= c(1,1, Bic1/(10^9))
+x2= c(1,2,Bic2/(10^9))
+x3= c(1,3,Bic3/(10^9))
+x4= c(1,4,Bic4/(10^9))
+x5= c(1,5,Bic5/(10^9))
+BIC_V= c(Bic1/(10^9), Bic2/(10^9), Bic3/(10^9), Bic4/(10^9), Bic5/(10^9))
+BIC_m= rbind(x1, x2,x3,x4,x5)
+colnames(BIC_m)=c("k1", "k2", "BIC_prop")
+BIC_df=data.frame(BIC_m)
+BIC_df
+
+
+
+ggplot(BIC_df, aes(x=k1, y=k2)) + 
+  geom_point(aes(size=BIC_prop)) +
+  ggtitle("BIC values divided by 10^9 plotted by K values")
+             
+
+```
+
+
