--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -30,6 +30,10 @@ These are the projects I am working on during the my rotation in the Stephens la
 
 * [Simulate bulk samples from Single cell gene list](simulate_bulk_genes.html)  
 
+* [Explore biological significance of single cell only genes](bio_singlecellony.html)  
+
+* [Explore single cell only genes by individual](sc_only_ind.html)
+
 Continue the Gilad single cell anaylsis:  
 
 * [Create gene-x-sample count matrices and annotation file](gene_x_sample_count_matrix.html)  
@@ -59,4 +63,5 @@ Work with cell cycle normalization
 * [Try citrus package for removing technical and cell cycle effects](try_citrus.html)
 
 * [Apply citrus package to Gilad lab data](apply_citrus_singlecell.html) 
+
 
