--- a/analysis/data_transformation.Rmd
+++ b/analysis/data_transformation.Rmd
@@ -217,10 +217,9 @@ plot_final
 Skip writting this figure as a tiff file  
 
 
-###Session Information  
 
-```{r}
-sessionInfo()
+
+## Session Information
+
+```{r session-info}
 ```
-
-
