--- a/analysis/standardize_CPM.Rmd
+++ b/analysis/standardize_CPM.Rmd
@@ -161,7 +161,7 @@ write.table(round(molecules_cpm_ercc, digits = 6), "../data/molecules-cpm-ercc.t
 
 ```
 
-###Session Information
-```{r}
-sessionInfo()
+## Session Information
+
+```{r session-info}
 ```
