--- a/analysis/QC_single_cell_library.Rmd
+++ b/analysis/QC_single_cell_library.Rmd
@@ -696,8 +696,8 @@ In this analysis we performed QC by checking the following criteria:
 
 
 
-###Session Info:
-```{r}
-sessionInfo()
-```
 
+## Session Information
+
+```{r session-info}
+```
