--- a/analysis/compare_19098_bulk_single.Rmd
+++ b/analysis/compare_19098_bulk_single.Rmd
@@ -5,16 +5,25 @@ date: YYYY-MM-DD
 output: html_document
 ---
 
+<!-- The file analysis/chunks.R contains chunks that define default settings
+shared across the workflowr files. -->
 ```{r read-chunk, include=FALSE, cache=FALSE}
 knitr::read_chunk("chunks.R")
 ```
 
+<!-- Update knitr chunk options -->
 ```{r knitr-opts-chunk, include=FALSE}
 ```
 
-**Last updated:** `r Sys.Date()`
+<!-- Insert the date the file was last updated -->
+```{r last-updated, echo=FALSE, results='asis'}
+```
 
-**Code version:** `r workflowr::extract_commit(".", 1)$sha1`
+<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
+ package git2r is installed -->
+```{r code-version, echo=FALSE, results='asis'}
+```
+
 ```{r}
 library("data.table")
 library("dplyr")
@@ -55,7 +64,8 @@ grid.newpage()
 grid.draw(genes_venn_19098)
 ```
 
-## Session Information
+## Session information
 
+<!-- Insert the session information into the document -->
 ```{r session-info}
 ```
