--- a/analysis/compare_count_data.Rmd
+++ b/analysis/compare_count_data.Rmd
@@ -3,6 +3,25 @@ title: "Compare count data"
 output: html_document
 ---
 
+<!-- The file analysis/chunks.R contains chunks that define default settings
+shared across the workflowr files. -->
+```{r read-chunk, include=FALSE, cache=FALSE}
+knitr::read_chunk("chunks.R")
+```
+
+<!-- Update knitr chunk options -->
+```{r knitr-opts-chunk, include=FALSE}
+```
+
+<!-- Insert the date the file was last updated -->
+```{r last-updated, echo=FALSE, results='asis'}
+```
+
+<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
+ package git2r is installed -->
+```{r code-version, echo=FALSE, results='asis'}
+```
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
@@ -186,3 +205,9 @@ Difference in dedup step: UMI-tools explicitly says it deals with similar UMI's,
 
 
 
+
+## Session information
+
+<!-- Insert the session information into the document -->
+```{r session-info}
+```
