--- a/analysis/recreate_cell_cycle_analysis.Rmd
+++ b/analysis/recreate_cell_cycle_analysis.Rmd
@@ -5,16 +5,24 @@ date: 2017-01-06
 output: html_document
 ---
 
+<!-- The file analysis/chunks.R contains chunks that define default settings
+shared across the workflowr files. -->
 ```{r read-chunk, include=FALSE, cache=FALSE}
 knitr::read_chunk("chunks.R")
 ```
 
+<!-- Update knitr chunk options -->
 ```{r knitr-opts-chunk, include=FALSE}
 ```
 
-**Last updated:** `r Sys.Date()`
+<!-- Insert the date the file was last updated -->
+```{r last-updated, echo=FALSE, results='asis'}
+```
 
-**Code version:** `r workflowr::extract_commit(".", 1)$sha1`
+<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
+ package git2r is installed -->
+```{r code-version, echo=FALSE, results='asis'}
+```
 
 General information for committing changes to the git hub site 
 
@@ -111,7 +119,9 @@ or use the -D flag to gmap to specify the correct genome directory.**
 
 try unzipping the files :  
 gzip: ERR489047_1.fastq.gz: unexpected end of file  
-## Session Information
 
+## Session information
+
+<!-- Insert the session information into the document -->
 ```{r session-info}
 ```
