--- a/analysis/technical_noise_control.Rmd
+++ b/analysis/technical_noise_control.Rmd
@@ -5,16 +5,24 @@ date: 2017-02-13
 output: html_document
 ---
 
+<!-- The file analysis/chunks.R contains chunks that define default settings
+shared across the workflowr files. -->
 ```{r read-chunk, include=FALSE, cache=FALSE}
 knitr::read_chunk("chunks.R")
 ```
 
+<!-- Update knitr chunk options -->
 ```{r knitr-opts-chunk, include=FALSE}
 ```
 
-**Last updated:** `r Sys.Date()`
+<!-- Insert the date the file was last updated -->
+```{r last-updated, echo=FALSE, results='asis'}
+```
 
-**Code version:** `r workflowr::extract_commit(".", 1)$sha1`
+<!-- Insert the code version (Git commit SHA1) if Git repository exists and R
+ package git2r is installed -->
+```{r code-version, echo=FALSE, results='asis'}
+```
 
 ```{r}
 library("dplyr")
@@ -178,7 +186,8 @@ ggplot( do.call(rbind,variance_components), aes(1-residual,col=method)) + geom_d
 
 * Calculate mean of means and SST ((each point - grand mean)^2)
 
-## Session Information
+## Session information
 
+<!-- Insert the session information into the document -->
 ```{r session-info}
 ```
