--- a/analysis/compare_count_data.Rmd
+++ b/analysis/compare_count_data.Rmd
@@ -64,7 +64,7 @@ head(anno_bri)
 Transpose matrix. 
 ```{r}
 reads_bri <-  bri_reads_raw %>%
-  select(starts_with("ENSG"), starts_with("ERCC")) %>%
+  dplyr::select(starts_with("ENSG"), starts_with("ERCC")) %>%
   t
 colnames(reads_bri) <- anno_bri$sample_id
 reads_bri[1:5, 1:5]
@@ -86,7 +86,7 @@ Transpoe matrix:
 
 ```{r}
 molecules_bri <- molecules_raw_bri %>%
-  select(starts_with("ENSG"), starts_with("ERCC")) %>%
+  dplyr::select(starts_with("ENSG"), starts_with("ERCC")) %>%
   t
 colnames(molecules_bri) <- anno_bri$sample_id
 molecules_bri[1:5, 1:5]
@@ -103,7 +103,7 @@ Create annotation file for bulk samples.
 
 ```{r}
 anno_bulk_bri <- reads_bulk_raw_bri %>%
-  select(individual:well) %>%
+  dplyr::select(individual:well) %>%
   mutate(batch = paste(individual, replicate, sep = "."),
          sample_id = paste(batch, well, sep = "."))
 head(anno_bulk_bri)
@@ -115,11 +115,12 @@ Transpose bulk read information.
 
 ```{r}
 reads_bulk_bri <- reads_bulk_raw_bri %>%
-  select(starts_with("ENSG"), starts_with("ERCC")) %>%
+  dplyr::select(starts_with("ENSG"), starts_with("ERCC")) %>%
   t
 colnames(reads_bulk_bri) <- anno_bulk_bri$sample_id
 
 ```
+
 
 ###Observed genes
 
@@ -152,7 +153,7 @@ Unlike the full data from git_hub. This data set has reads that are shared betwe
 ```{r}
 reads_raw <- fread("../../singleCellSeq/data/reads-raw-single-per-sample.txt")
 reads <- reads_raw %>%
-  select(starts_with("ENSG"), starts_with("ERCC")) %>%
+  dplyr::select(starts_with("ENSG"), starts_with("ERCC")) %>%
   t
 genes_observed_reads <- rownames(reads)[rowSums(reads) > 0]
 
