--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -34,6 +34,8 @@ These are the projects I am working on during the my rotation in the Stephens la
 
 * [Explore single cell only genes by individual](sc_only_ind.html)
 
+* [Explore single cell genes only accounting for cell quality](sc_only_qualitycells.html)
+
 Continue the Gilad single cell anaylsis:  
 
 * [Create gene-x-sample count matrices and annotation file](gene_x_sample_count_matrix.html)  
