--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -36,6 +36,9 @@ These are the projects I am working on during the my rotation in the Stephens la
 
 * [Explore single cell genes only accounting for cell quality](sc_only_qualitycells.html)
 
+
+* [Explore number of genes seen in each cell](genes_#_percell.html)
+
 Continue the Gilad single cell anaylsis:  
 
 * [Create gene-x-sample count matrices and annotation file](gene_x_sample_count_matrix.html)  
