--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -39,6 +39,8 @@ These are the projects I am working on during the my rotation in the Stephens la
 
 * [Explore number of genes seen in each cell](gene_num_percell.html)
 
+* [Look at technical factors using ERCC in single cell only](ERCC_sc_only.html)
+
 Continue the Gilad single cell anaylsis:  
 
 * [Create gene-x-sample count matrices and annotation file](gene_x_sample_count_matrix.html)  
